# Train3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindSOIL.cmake
data/shaders/: simple-transform.vert  simple.vert  terrain.frag  terrain.vert
data/shaders/common/: terrain.glsl
data/shaders/frag/: simple.glsl  standard.glsl  terrain.glsl
data/shaders/vert/: standard.glsl  terrain.glsl
sources/: CMakeLists.txt  main.cpp  ogl.h
sources/di/: CMakeLists.txt  di-container.h
sources/env/: CMakeLists.txt  file.cpp  file.h  window.cpp  window.h
sources/gfx/: CMakeLists.txt  mesh.cpp  mesh.h  shader-manager.cpp  shader-manager.h  shader-program.cpp  shader-program.h  texture.cpp  texture.h
sources/input/: CMakeLists.txt  free-camera-controller.cpp  free-camera-controller.h  icamera-controller.h
sources/model/: CMakeLists.txt  camera.cpp  camera.h  controllable-camera.cpp  controllable-camera.h
sources/res/: CMakeLists.txt  image-curve-provider.cpp  image-curve-provider.h  image-data.h  image-height-provider.cpp  image-height-provider.h  image-loader.cpp  image-loader.h  mesh-data.h  mesh-generator.cpp  mesh-generator.h  shader-preprocessor.cpp  shader-preprocessor.h  vertex-definition.cpp  vertex-definition.h  vertex-format.cpp  vertex-format.h
sources/util/: CMakeLists.txt  circle-curve-provider.cpp  circle-curve-provider.h  curve-iterator.cpp  curve-iterator.h  curve-provider.h  height-provider.cpp  height-provider.h  time-step.cpp  time-step.h
